# coding-challenges

./: .gitignore  README.md  coding-challenges.code-workspace
0_build_your_own_wc/c/: CMakeLists.txt
0_build_your_own_wc/c/src/: ccwc.c
0_build_your_own_wc/c/tests/: CMakeLists.txt
0_build_your_own_wc/cpp/: CMakeLists.txt
0_build_your_own_wc/cpp/include/: argument_parser.hpp  ccwc.hpp  counters.hpp
0_build_your_own_wc/cpp/src/: ccwc.cpp
0_build_your_own_wc/cpp/tests/: 5_lines_ascii.txt  5_lines_utf8.txt  CMakeLists.txt  test_argument_parser.cpp  test_counters.cpp
1_build_your_own_cat/c/: CMakeLists.txt
1_build_your_own_cat/c/include/: CMakeLists.txt  PrintFile.c  PrintFile.h  print_lines.c  print_lines.h
1_build_your_own_cat/c/src/: cccat.c
1_build_your_own_cat/c/tests/: CMakeLists.txt  test_PrintFile.cpp
2_build_your_own_shell/c/: CMakeLists.txt
2_build_your_own_shell/c/include/: CMakeLists.txt
2_build_your_own_shell/c/tests/: CMakeLists.txt  test_ccsh.cpp
